[package]
name = "puffin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bitflags.workspace = true
common-error.workspace = true
common-macro.workspace = true
derive_builder.workspace = true
futures.workspace = true
pin-project.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
async-walkdir = "2.0.0"
lz4_flex = "0.11"
uuid.workspace = true
async-compression = "0.4.11"
tokio.workspace = true
tokio-util.workspace = true
moka.workspace = true
sha2 = "0.10.8"
base64.workspace = true
common-telemetry.workspace = true

[dev-dependencies]
common-test-util.workspace = true
async-stream.workspace = true